--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,6 @@
         <module>eureka-server</module>
         <module>config-server-git</module>
         <module>config-client</module>
+        <module>eureka-consumer-ribbon-hystrix</module>
     </modules>
 </project>
