--- a/trace-2/src/main/resources/application.properties
+++ b/trace-2/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=trace-2
 server.port=9102
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+
+spring.zipkin.base-url=http://localhost:9411
