--- a/eureka-consumer-ribbon-hystrix/src/main/resources/application.properties
+++ b/eureka-consumer-ribbon-hystrix/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=eureka-consumer-ribbon-hystrix
 server.port=2101
 
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
+
+management.security.enabled=false
