--- a/swagger-api-gateway/src/main/resources/application.properties
+++ b/swagger-api-gateway/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.port=11000
 eureka.client.serviceUrl.defaultZone=http://localhost:1001/eureka/
 
 swagger.base-package=com.yy
+
+# 路由配置
+zuul.routes.api-a.path=/api-a/**
+zuul.routes.api-a.serviceId=SWAGGER-SERVICE-A
+
+# 路由配置
+zuul.routes.api-b.path=/api-b/**
+zuul.routes.api-b.serviceId=SWAGGER-SERVICE-B
